Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13084

MariaDB 10.2 crashes on corrupted SYS_TABLES.MIX_LEN field

    XMLWordPrintable

Details

    Description

      MySQL 5.7 introduced a change that broke compatibility with old data files, by reading the SYS_TABLES.MIX_LEN column also for ROW_FORMAT=REDUNDANT tables, even though this column was written as uninitialized garbage in MySQL 4.1 and earlier versions.

      Because MariaDB 10.2 does not support the TABLESPACE attribute for InnoDB tables like MySQL 5.7 does, we do not need this change and can essentially revert it.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1h
                  1h
                  Remaining:
                  Remaining Estimate - 1h
                  1h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.